feat: add expert system and composer action menu
