# backend/astraflow-api/api/astraflow/v1/expert_http.pb.go
@@ -1,0 +1,199 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             (unknown)
+// source: astraflow/v1/expert.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v3/transport/http"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+
+const _ = http.SupportPackageIsVersion3
+
+const OperationExpertServiceGetExpert = "/astraflow.v1.ExpertService/GetExpert"
+const OperationExpertServiceGetExpertRuntime = "/astraflow.v1.ExpertService/GetExpertRuntime"
+const OperationExpertServiceListExpertCategories = "/astraflow.v1.ExpertService/ListExpertCategories"
+const OperationExpertServiceListExperts = "/astraflow.v1.ExpertService/ListExperts"
+
+type ExpertServiceHTTPServer interface {
+	GetExpert(context.Context, *GetExpertRequest) (*GetExpertResponse, error)
+	GetExpertRuntime(context.Context, *GetExpertRuntimeRequest) (*GetExpertRuntimeResponse, error)
+	ListExpertCategories(context.Context, *ListExpertCategoriesRequest) (*ListExpertCategoriesResponse, error)
+	ListExperts(context.Context, *ListExpertsRequest) (*ListExpertsResponse, error)
+}
+
+func RegisterExpertServiceHTTPServer(s *http.Server, srv ExpertServiceHTTPServer) {
+	r := s.Route("/")
+	r.Handle("GET", "/v1/expert-categories", _ExpertService_ListExpertCategories0_HTTP_Handler(srv))
+	r.Handle("GET", "/v1/experts", _ExpertService_ListExperts0_HTTP_Handler(srv))
+	r.Handle("GET", "/v1/experts/{expert_id}", _ExpertService_GetExpert0_HTTP_Handler(srv))
+	r.Handle("GET", "/v1/experts/{expert_id}/runtime", _ExpertService_GetExpertRuntime0_HTTP_Handler(srv))
+}
+
+func _ExpertService_ListExpertCategories0_HTTP_Handler(srv ExpertServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ListExpertCategoriesRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationExpertServiceListExpertCategories)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListExpertCategories(ctx, req.(*ListExpertCategoriesRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ListExpertCategoriesResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ExpertService_ListExperts0_HTTP_Handler(srv ExpertServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ListExpertsRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationExpertServiceListExperts)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListExperts(ctx, req.(*ListExpertsRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ListExpertsResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ExpertService_GetExpert0_HTTP_Handler(srv ExpertServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetExpertRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationExpertServiceGetExpert)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetExpert(ctx, req.(*GetExpertRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetExpertResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ExpertService_GetExpertRuntime0_HTTP_Handler(srv ExpertServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetExpertRuntimeRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationExpertServiceGetExpertRuntime)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetExpertRuntime(ctx, req.(*GetExpertRuntimeRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetExpertRuntimeResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+type ExpertServiceHTTPClient interface {
+	GetExpert(ctx context.Context, req *GetExpertRequest, opts ...http.CallOption) (rsp *GetExpertResponse, err error)
+	GetExpertRuntime(ctx context.Context, req *GetExpertRuntimeRequest, opts ...http.CallOption) (rsp *GetExpertRuntimeResponse, err error)
+	ListExpertCategories(ctx context.Context, req *ListExpertCategoriesRequest, opts ...http.CallOption) (rsp *ListExpertCategoriesResponse, err error)
+	ListExperts(ctx context.Context, req *ListExpertsRequest, opts ...http.CallOption) (rsp *ListExpertsResponse, err error)
+}
+
+type ExpertServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewExpertServiceHTTPClient(client *http.Client) ExpertServiceHTTPClient {
+	return &ExpertServiceHTTPClientImpl{client}
+}
+
+func (c *ExpertServiceHTTPClientImpl) GetExpert(ctx context.Context, in *GetExpertRequest, opts ...http.CallOption) (*GetExpertResponse, error) {
+	var out GetExpertResponse
+	pattern := "/v1/experts/{expert_id}"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationExpertServiceGetExpert),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *ExpertServiceHTTPClientImpl) GetExpertRuntime(ctx context.Context, in *GetExpertRuntimeRequest, opts ...http.CallOption) (*GetExpertRuntimeResponse, error) {
+	var out GetExpertRuntimeResponse
+	pattern := "/v1/experts/{expert_id}/runtime"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationExpertServiceGetExpertRuntime),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *ExpertServiceHTTPClientImpl) ListExpertCategories(ctx context.Context, in *ListExpertCategoriesRequest, opts ...http.CallOption) (*ListExpertCategoriesResponse, error) {
+	var out ListExpertCategoriesResponse
+	pattern := "/v1/expert-categories"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationExpertServiceListExpertCategories),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *ExpertServiceHTTPClientImpl) ListExperts(ctx context.Context, in *ListExpertsRequest, opts ...http.CallOption) (*ListExpertsResponse, error) {
+	var out ListExpertsResponse
+	pattern := "/v1/experts"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationExpertServiceListExperts),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
